--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -9,6 +9,58 @@
     -fx-text-inner-color: white;
 }
 
+.scroll-pane > .viewport {
+    -fx-background-color: transparent;
+}
+
+.scroll-pane {
+    -fx-background-color: transparent;
+}
+
+.scroll-bar:horizontal .track,
+.scroll-bar:vertical .track{
+    -fx-background-color: very_dark;
+    -fx-border-color: transparent;
+    -fx-background-radius: 0.0em;
+    -fx-border-radius: 0;
+}
+
+
+.scroll-bar:horizontal .increment-button ,
+.scroll-bar:horizontal .decrement-button {
+    -fx-background-color: transparent;
+    -fx-background-radius: 0.0em;
+    -fx-padding: 0.0 0.0 10.0 0.0;
+
+}
+
+.scroll-bar:vertical .increment-button ,
+.scroll-bar:vertical .decrement-button {
+    -fx-background-color: transparent;
+    -fx-background-radius: 0.0em;
+    -fx-padding: 0.0 10.0 0.0 0.0;
+}
+
+.scroll-bar:vertical .increment-arrow,
+.scroll-bar:vertical .decrement-arrow{
+    -fx-shape: " ";
+    -fx-padding: 0.0 0.15em;
+}
+
+.scroll-bar:horizontal .thumb,
+.scroll-bar:vertical .thumb {
+    -fx-background-color: white;
+    -fx-background-insets: 4.0, 0.0, 0.0;
+    -fx-background-radius: 0;
+}
+
+.titled-pane > .title > .arrow-button .arrow {
+    -fx-background-color: white, white;
+    -fx-background-insets: 1 0 -1 0, 0;
+    -fx-padding: 0.25em 0.3125em 0.25em 0.3125em; /* 3 3.75 3 3.75 */
+    -fx-shape: "M 0 0 h 7 l -3.5 4 z";
+}
+
 .titled-pane, .text {
     -fx-font-size: 13;
     -fx-font-smoothing-type: gray;
@@ -29,7 +81,8 @@
 
 .titled-pane:focused > .title > .arrow-button .arrow
 {
-    -fx-background-color: darker_color;
+    -fx-background-color: white;
+    -fx-effect: null;
 }
 
 .button {
