--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -70,7 +70,7 @@
                <TitledPane text="Audio Effects">
                   <fx:include fx:id="effects" source="effects.fxml" />
                </TitledPane>
-               <TitledPane text="3D .obj file settings">
+               <TitledPane fx:id="objTitledPane" text="3D .obj file settings">
                   <fx:include fx:id="obj" source="obj.fxml" />
                </TitledPane>
             </children>
