--- a/src/main/resources/fxml/effects.fxml
+++ b/src/main/resources/fxml/effects.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.SVGPath?>
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="356.0" prefWidth="511.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sh.ball.gui.controller.EffectsController">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="356.0" prefWidth="576.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sh.ball.gui.controller.EffectsController">
     <children>
         <CheckBox fx:id="vectorCancellingCheckBox" layoutX="14.0" layoutY="15.0" mnemonicParsing="false" text="Vector cancelling" />
         <Slider fx:id="vectorCancellingSlider" blockIncrement="0.005" disable="true" layoutX="154.0" layoutY="16.0" majorTickUnit="0.1" max="1.0" prefHeight="42.0" prefWidth="219.0" showTickLabels="true" showTickMarks="true" value="0.11111111" />
@@ -36,5 +36,12 @@
       <ComboBox fx:id="verticalDistortComboBox" layoutX="404.0" layoutY="105.0" prefHeight="26.0" prefWidth="102.0" />
       <ComboBox fx:id="bitCrushComboBox" layoutX="404.0" layoutY="60.0" prefHeight="26.0" prefWidth="102.0" />
       <ComboBox fx:id="vectorCancellingComboBox" layoutX="404.0" layoutY="12.0" prefHeight="26.0" prefWidth="102.0" />
+      <CheckBox fx:id="vectorCancellingMic" layoutX="517.0" layoutY="16.0" mnemonicParsing="false" text="Mic" />
+      <CheckBox fx:id="bitCrushMic" layoutX="517.0" layoutY="64.0" mnemonicParsing="false" text="Mic" />
+      <CheckBox fx:id="verticalDistortMic" layoutX="517.0" layoutY="109.0" mnemonicParsing="false" text="Mic" />
+      <CheckBox fx:id="horizontalDistortMic" layoutX="517.0" layoutY="158.0" mnemonicParsing="false" text="Mic" />
+      <CheckBox fx:id="wobbleMic" layoutX="517.0" layoutY="207.0" mnemonicParsing="false" text="Mic" />
+      <CheckBox fx:id="smoothMic" layoutX="517.0" layoutY="254.0" mnemonicParsing="false" text="Mic" />
+      <CheckBox fx:id="traceMic" layoutX="517.0" layoutY="303.0" mnemonicParsing="false" text="Mic" />
     </children>
 </AnchorPane>
