--- a/src/main/resources/fxml/effects.fxml
+++ b/src/main/resources/fxml/effects.fxml
@@ -23,15 +23,15 @@
         <SVGPath fx:id="verticalDistortMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="373.0" layoutY="108.0" pickOnBounds="true" />
         <SVGPath fx:id="horizontalDistortMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="373.0" layoutY="157.0" pickOnBounds="true" />
         <SVGPath fx:id="wobbleMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="373.0" layoutY="206.0" pickOnBounds="true" />
-        <CheckBox fx:id="smoothCheckBox" layoutX="14.0" layoutY="255.0" mnemonicParsing="false" text="Smoothing" />
-        <Slider fx:id="smoothSlider" blockIncrement="0.005" disable="true" layoutX="154.0" layoutY="257.0" majorTickUnit="0.1" max="1.0" minorTickCount="1" prefHeight="38.0" prefWidth="219.0" showTickLabels="true" showTickMarks="true" value="0.125" />
-        <SVGPath fx:id="smoothMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="373.0" layoutY="253.0" pickOnBounds="true" />
+        <CheckBox fx:id="smoothingCheckBox" layoutX="14.0" layoutY="255.0" mnemonicParsing="false" text="Smoothing" />
+        <Slider fx:id="smoothingSlider" blockIncrement="0.005" disable="true" layoutX="154.0" layoutY="257.0" majorTickUnit="0.1" max="1.0" minorTickCount="1" prefHeight="38.0" prefWidth="219.0" showTickLabels="true" showTickMarks="true" value="0.125" />
+        <SVGPath fx:id="smoothingMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="373.0" layoutY="253.0" pickOnBounds="true" />
         <CheckBox fx:id="traceCheckBox" layoutX="14.0" layoutY="304.0" mnemonicParsing="false" text="Trace" />
         <Slider fx:id="traceSlider" blockIncrement="0.005" disable="true" layoutX="154.0" layoutY="306.0" majorTickUnit="0.1" max="1.0" prefHeight="38.0" prefWidth="219.0" showTickLabels="true" showTickMarks="true" value="0.5" />
         <SVGPath fx:id="traceMidi" content="M20.15 8.26H22V15.74H20.15M13 8.26H18.43C19 8.26 19.3 8.74 19.3 9.3V14.81C19.3 15.5 19 15.74 18.38 15.74H13V11H14.87V13.91H17.5V9.95H13M10.32 8.26H12.14V15.74H10.32M2 8.26H8.55C9.1 8.26 9.41 8.74 9.41 9.3V15.74H7.59V10.15H6.5V15.74H4.87V10.15H3.83V15.74H2Z" fill="WHITE" layoutX="373.0" layoutY="302.0" pickOnBounds="true" />
       <ComboBox fx:id="wobbleComboBox" layoutX="404.0" layoutY="203.0" prefHeight="26.0" prefWidth="102.0" />
       <ComboBox fx:id="traceComboBox" layoutX="404.0" layoutY="299.0" prefHeight="26.0" prefWidth="102.0" />
-      <ComboBox fx:id="smoothComboBox" layoutX="404.0" layoutY="250.0" prefHeight="26.0" prefWidth="102.0" />
+      <ComboBox fx:id="smoothingComboBox" layoutX="404.0" layoutY="250.0" prefHeight="26.0" prefWidth="102.0" />
       <ComboBox fx:id="horizontalDistortComboBox" layoutX="404.0" layoutY="154.0" prefHeight="26.0" prefWidth="102.0" />
       <ComboBox fx:id="verticalDistortComboBox" layoutX="404.0" layoutY="105.0" prefHeight="26.0" prefWidth="102.0" />
       <ComboBox fx:id="bitCrushComboBox" layoutX="404.0" layoutY="60.0" prefHeight="26.0" prefWidth="102.0" />
@@ -41,7 +41,7 @@
       <CheckBox fx:id="verticalDistortMic" layoutX="517.0" layoutY="109.0" mnemonicParsing="false" text="Mic" />
       <CheckBox fx:id="horizontalDistortMic" layoutX="517.0" layoutY="158.0" mnemonicParsing="false" text="Mic" />
       <CheckBox fx:id="wobbleMic" layoutX="517.0" layoutY="207.0" mnemonicParsing="false" text="Mic" />
-      <CheckBox fx:id="smoothMic" layoutX="517.0" layoutY="254.0" mnemonicParsing="false" text="Mic" />
+      <CheckBox fx:id="smoothingMic" layoutX="517.0" layoutY="254.0" mnemonicParsing="false" text="Mic" />
       <CheckBox fx:id="traceMic" layoutX="517.0" layoutY="303.0" mnemonicParsing="false" text="Mic" />
     </children>
 </AnchorPane>
