Reorganise image settings and add adjustable image translation scrolling increment

--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -289,3 +289,31 @@
 .context-menu {
     -fx-background-color: -fx-my-menu-color;
 }
+
+.spinner .increment-arrow-button {
+    -fx-border-width: 1px 1px 0 0;
+    -fx-border-color: white;
+}
+.spinner .decrement-arrow-button {
+    -fx-border-width: 0 1px 1px 0;
+    -fx-border-color: white;
+}
+.spinner .increment-arrow-button,
+.spinner .decrement-arrow-button {
+    -fx-background-color: very_dark;
+    -fx-background-radius: 0;
+}
+.spinner .increment-arrow-button:hover,
+.spinner .decrement-arrow-button:hover {
+    -fx-background-color: grey_color;
+}
+.spinner .increment-arrow-button:hover:pressed,
+.spinner .decrement-arrow-button:hover:pressed,
+.spinner .increment-arrow-button:pressed,
+.spinner .decrement-arrow-button:pressed {
+    -fx-background-color: white;
+}
+.spinner .increment-arrow-button .increment-arrow,
+.spinner .decrement-arrow-button .decrement-arrow {
+    -fx-background-color: white;
+}
